--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,12 @@
 {
     "require-dev": {
-        "phpunit/phpunit": "^9.6"
+        "phpunit/phpunit": "^9.6",
+        "mockery/mockery": "^1.6"
+    },
+
+    "autoload": {
+        "psr-4": {
+            "TestNamespace\\": "src/"
+        }
     }
 }
