--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,14 @@
 {
-    "require-dev": {
-        "phpunit/phpunit": "^9.6",
-        "mockery/mockery": "^1.6"
-    },
-
-    "autoload": {
-        "psr-4": {
-            "TestNamespace\\": "src/"
-        }
-    }
+	"require-dev": {
+		"phpunit/phpunit": "^9.6",
+		"mockery/mockery": "^1.6"
+	},
+	"autoload": {
+		"psr-4": {
+			"TestNamespace\\": "src/"
+		}
+	},
+	"scripts": {
+		"test": "php vendor/bin/phpunit tests/ --color --testdox"
+	}
 }
